--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -2,7 +2,7 @@ name: Auto
 
 on:
   schedule:
-    - cron: "30 22 * * *" # 北京时间上午06:30
+    - cron: "0 0,4,10 * * *"  # 北京时间 8点、12点和18点
   workflow_dispatch:
 
 env:
