--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -15,7 +15,7 @@ env:
   DINGDING_WEBHOOK: ${{ secrets.DINGDING_WEBHOOK }}
   PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
   WEIXIN_WEBHOOK: ${{ secrets.WEIXIN_WEBHOOK }}
-  SERVERPUSHKEY: ${{ SCT271624TMz2waqz0dzgrIlQJO8ZGiqjK }}
+  SERVERPUSHKEY: ${{ secrets.SERVERPUSHKEY }}
   FEISHU_WEBHOOK: ${{ secrets.FEISHU_WEBHOOK }}
   AIBOTK_KEY: ${{ secrets.AIBOTK_KEY }}
   AIBOTK_ROOM_RECIVER: ${{ secrets.AIBOTK_ROOM_RECIVER }}
